--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,2 +1,13 @@
 * { padding: 0px; margin: 0px; border: 0px; box-sizing: border-box; }
 html, body { height: 100%; }
+
+
+body {
+	font-family: 'Lcg'; font-size: 15px; line-height: 1.6; letter-spacing: -0.1px; color: #000;
+	overflow-x: hidden; overflow-y: scroll; background: #fff;
+	-webkit-font-smoothing: antialiased;
+	overscroll-behavior: none;
+}
+body.over { overflow-y: hidden; }
+
+#drag { -webkit-app-region: drag; position: fixed; top: 0px; left: 0px; width: 100%; height: 36px; z-index: -1; user-select: none; }
