--- a/src/css/common.css
+++ b/src/css/common.css
@@ -9,5 +9,6 @@ body {
 	overscroll-behavior: none;
 }
 body.over { overflow-y: hidden; }
+body.page-auth-code { background: #000; }
 
 #drag { -webkit-app-region: drag; position: fixed; top: 0px; left: 0px; width: 100%; height: 36px; z-index: -1; user-select: none; }
