--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,7 +1,6 @@
 * { padding: 0px; margin: 0px; border: 0px; box-sizing: border-box; }
 html, body { height: 100%; }
 
-
 body {
 	font-family: 'Lcg'; font-size: 15px; line-height: 1.6; letter-spacing: -0.1px; color: #000;
 	overflow-x: hidden; overflow-y: scroll; background: #fff;
@@ -9,6 +8,20 @@ body {
 	overscroll-behavior: none;
 }
 body.over { overflow-y: hidden; }
-body.page-auth-code { background: #000; }
+body.page-auth, body.page-index-index { background: #000; }
+
+:focus { outline: 0px; }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus
+input:-webkit-autofill, 
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus { transition: background-color 5000s ease-in-out 0s; }
+input, textarea, select { font-family: 'Lcg'; }
 
 #drag { -webkit-app-region: drag; position: fixed; top: 0px; left: 0px; width: 100%; height: 36px; z-index: -1; user-select: none; }
