--- a/src/scss/component/button.scss
+++ b/src/scss/component/button.scss
@@ -1,4 +1,4 @@
-@import "~css/_vars";
+@import "~scss/_vars";
 
 .button { 
 	display: inline-block; text-align: center; border: 0px;	font-weight: 600; text-decoration: none; cursor: pointer;
