--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -25,3 +25,8 @@ select:-webkit-autofill:focus { transition: background-color 5000s ease-in-out 0
 input, textarea, select { font-family: 'Lcg'; }
 
 #drag { -webkit-app-region: drag; position: fixed; top: 0px; left: 0px; width: 100%; height: 36px; z-index: -1; user-select: none; }
+
+.fileWrap { position: relative; overflow: hidden; cursor: pointer; }
+.fileWrap { 
+	.input-file { position: absolute; left: 0px; top: 0px; opacity: 0; width: 100%; height: 100%; cursor: pointer; z-index: 100; padding: 0px; } 
+}
