added mobX example

--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -18,7 +18,7 @@
 		.title { font-size: 32px; font-weight: 600; letter-spacing: -0.5px; color: #393834; line-height: 1; margin-bottom: 18px; }
 		.label { margin-bottom: 4px; }
 		.input { width: 468px; margin-right: 16px; }
-		.button { width: 92px; }
+		.button { width: 92px; vertical-align: top; }
 	}
 }
 
