--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -5,9 +5,15 @@
 	background-position: center center; transition: $transitionFast; position: relative;
 }
 
+.icon.help { width: 22px; height: 22px; background-image: url('~img/icon/help/dark0.svg'); }
+.icon.help:hover { background-image: url('~img/icon/help/dark1.svg'); }
+
+.icon.help.light { background-image: url('~img/icon/help/light0.svg'); }
+.icon.help.light:hover { background-image: url('~img/icon/help/light1.svg'); }
+
 .icon.user { 
-	width: 64px; height: 64px; border-radius: 100%; border: solid 2px #fff; font-weight: 400; position: relative;
-	text-transform: uppercase; font-size: 22px; color: #fff; background-color: #4fb1ef; text-align: center; line-height: 62px;
+	width: 64px; height: 64px; border-radius: 100%; font-weight: 600; position: relative; overflow: hidden;
+	text-transform: uppercase; font-size: 22px; color: #fff; background-color: #2dbcfe; text-align: center; line-height: 62px;
 }
 .icon.user {
 	.txt { line-height: inherit; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 1; }
