--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -13,7 +13,7 @@
 
 .icon.user { 
 	width: 64px; height: 64px; border-radius: 100%; font-weight: 600; position: relative; overflow: hidden;
-	text-transform: uppercase; font-size: 22px; color: #fff; background-color: #2dbcfe; text-align: center; line-height: 62px;
+	text-transform: uppercase; font-size: 22px; color: #fff; text-align: center; line-height: 62px;
 }
 .icon.user {
 	.txt { line-height: inherit; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 1; }
@@ -22,6 +22,7 @@
 		border-radius: 100%; 
 	}
 }
+.icon.user.grey { background-color: $colorGrey; }
 .icon.user.black { background-color: $colorBlack; }
 .icon.user.brown { background-color: $colorBrown; }
 .icon.user.orange { background-color: $colorOrange; }
