--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -30,6 +30,8 @@ input, textarea, select { font-family: 'Lcg'; }
 	.input-file { position: absolute; left: 0px; top: 0px; opacity: 0; width: 100%; height: 100%; cursor: pointer; z-index: 100; padding: 0px; } 
 }
 
-#commonHelp { position: fixed; right: 12px; bottom: 12px; cursor: pointer; z-index: 11; }
+#help { position: fixed; right: 12px; bottom: 12px; cursor: pointer; z-index: 11; }
+
+a { color: #000; }
 
 nav { position: absolute; left: 50px; top: 50px; z-index: 100; }
