--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -6,10 +6,7 @@
 	
 	.copy { width: 120px; position: fixed; left: 50%; bottom: 12px; z-index: 1; text-align: center; margin-left: -60px; color: #fff; }
 	
-	.frame { 
-		width: 672px; position: fixed; left: 50%; top: 50%; margin-left: -336px; z-index: 1; background: #fff; border-radius: 8px;
-		padding: 36px 48px 32px 48px; 
-	}
+	.frame { width: 672px; padding: 36px 48px 32px 48px; }
 	.title { font-size: 36px; line-height: 40px; font-weight: 600; letter-spacing: -0.72px; color: #000; margin-bottom: 15px; }
 	.label { margin-bottom: 25px; }
 	.input { height: 40px; border: solid 1px #d2d0c2; }
