--- a/src/scss/component/popup.scss
+++ b/src/scss/component/popup.scss
@@ -2,5 +2,11 @@
 	.dimmer { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 100; background: rgba(0,0,0,0.2); }
 	.popup { position: fixed; left: 50%; top: 50%; z-index: 101; background: #fff; border-radius: 8px; }
 	
+	.icon.close { 
+		position: absolute; top: 0px; right: 0px; background-size: 10px 10px; width: 40px; height: 40px; cursor: pointer;
+		background-image: url('~img/icon/popup/close0.svg');
+	}
+	.icon.close:hover { background-image: url('~img/icon/popup/close1.svg'); }
+	
 	.popup-test { width: 640px; height: 480px; }	
 }
