--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -1,6 +1,6 @@
 @import "~scss/_vars";
 
-.page-auth, .page-index-index {
+.page-auth, .page-index {
 	.frame { width: 672px; padding: 36px 48px 32px 48px; }
 	.title { font-size: 36px; line-height: 40px; font-weight: 600; letter-spacing: -0.72px; color: #000; margin-bottom: 15px; }
 	.label { margin-bottom: 25px; }
