--- a/src/scss/component/menu.scss
+++ b/src/scss/component/menu.scss
@@ -20,8 +20,6 @@
 		.name { display: inline-block; vertical-align: middle; line-height: 1; margin-top: 2px; }
 	}
 	
-	.menu.menu-help { width: 224px; }
-	
 	.icon.chat { background-size: 18px 20px; background-image: url('~img/icon/menu/help/chat0.svg'); }
 	.icon.feature { background-size: 22px 21px; background-image: url('~img/icon/menu/help/feature0.svg'); }
 	.icon.community { background-size: 18px 16px; background-image: url('~img/icon/menu/help/community0.svg'); }
@@ -31,4 +29,10 @@
 		.icon.feature { background-image: url('~img/icon/menu/help/feature1.svg'); }
 		.icon.community { background-image: url('~img/icon/menu/help/community1.svg'); }
 	}
+	
+	.menu.menu-help { width: 224px; }
+}
+
+.menu-main {
+	overflow-x: hidden; overflow-y: auto;
 }
