--- a/src/scss/component/popup.scss
+++ b/src/scss/component/popup.scss
@@ -8,5 +8,5 @@
 	}
 	.icon.close:hover { background-image: url('~img/icon/popup/close1.svg'); }
 	
-	.popup-test { width: 640px; height: 480px; }	
+	.popup-profile { width: 640px; height: 480px; }	
 }
