--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -5,6 +5,6 @@
 .smile {
 	.emoji-mart-emoji { height: 100%; display: inline-block; vertical-align: middle; }
 	.emoji-mart-emoji {
-		span { height: 100%; display: inline-block; vertical-align: middle; }
+		span { height: 100%; display: inline-block; vertical-align: middle; background-image: url('~img/emoji.png') !important; }
 	}
 }
