--- a/src/scss/component/textArea.scss
+++ b/src/scss/component/textArea.scss
@@ -1,5 +1,9 @@
+@import "~scss/_vars";
+
 .textArea {
 	width: 100%; height: 100px; resize: none; font-size: 15px; border: 0px; background: #f7f5f0; padding: 20px;
 	line-height: 1.6; letter-spacing: -0.1px; color: #000; display: block;
 }
 .textArea::placeholder { color: #d2d0c2; }
+
+.textArea.withError { border-color: $colorRed !important; }
