--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -1,6 +1,6 @@
 @import "~scss/_vars";
 
-.page-auth, .page-index {
+.pageAuth, .pageIndex {
 	.frame { width: 672px; padding: 36px 48px 32px 48px; }
 	.title { font-size: 36px; line-height: 40px; font-weight: 600; letter-spacing: -0.72px; color: #000; margin-bottom: 15px; }
 	.label { margin-bottom: 25px; }
@@ -21,25 +21,21 @@
 	.button:last-child { margin: 0px; }
 }
 
-.page-auth-select, .page-index-index {
-	.smile { opacity: 0; }
-}
-
-.page-auth-login {
+.pageAuthLogin {
 	.label { margin-bottom: 9px; }
 }
 
-.page-auth-pin-select, .page-auth-pin-confirm {
+.pageAuthPinSelect, .pageAuthPinConfirm {
 	.input { width: 40px; margin-right: 8px; padding: 0px; text-align: center; vertical-align: top; font-size: 18px; }
 	.input-password { font-size: 36px; }
 	.input:last-child { margin: 0px; }
 }
 
-.page-auth-setup {
+.pageAuthSetup {
 	.title { margin: 0px; }
 }
 
-.page-auth-account-select {
+.pageAuthAccountSelect {
 	.frame { padding-bottom: 48px; }
 	.title { margin-bottom: 21px; }
 	.list { border-radius: 8px; border: 1px solid #e0ded2; }
@@ -64,7 +60,7 @@
 	}
 }
 
-.page-auth-register {
+.pageAuthRegister {
 	.frame { white-space: nowrap; padding-bottom: 36px; }
 	.fileWrap { margin-right: 16px; width: 64px; height: 64px; display: inline-block; vertical-align: middle; }
 
