--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -28,7 +28,7 @@
 				.emoji-mart-emoji { span { height: 32px; line-height: 32px; margin: -1px 0px 0px 2px; } }
 			}
 			.name { 
-				font-size: 15px; line-height: 1.33; height: 1.33em; letter-spacing: -0.1px; width: 100%;
+				font-size: 15px; font-weight: 500; line-height: 24px; height: 24px; letter-spacing: -0.1px; width: 100%;
 				overflow: hidden; word-break: break-word; position: absolute; left: 0px; bottom: 16px; padding: 0px 16px;
 			}
 		}
