lcg medium font

--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -16,6 +16,10 @@
 	src: url('~font/lcg/italic.otf') format('opentype');
 }
 @font-face {
+	font-family: 'Lcg'; font-style: normal; font-weight: 500;
+	src: url('~font/lcg/medium.otf') format('opentype');
+}
+@font-face {
 	font-family: 'Lcg'; font-style: bold; font-weight: 600;
 	src: url('~font/lcg/bold.otf') format('opentype');
 }
