--- a/src/scss/component/popup.scss
+++ b/src/scss/component/popup.scss
@@ -2,7 +2,10 @@
 
 .popups {
 	.dimmer { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 100; background: rgba(0,0,0,0.2); }
-	.popup { position: fixed; left: 50%; top: 50%; z-index: 101; background: #fff; border-radius: 8px; }
+	.popup { 
+		position: fixed; left: 50%; top: 50%; z-index: 101; background: #fff; border-radius: 8px; 
+		transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out; 
+	}
 	
 	.popup-profile { width: 640px; height: 480px; }
 }
