settings notification switches, phrase and pin code pages

--- a/src/scss/component/button.scss
+++ b/src/scss/component/button.scss
@@ -6,7 +6,7 @@
 	font-size: 15px; vertical-align: middle; position: relative; overflow: hidden; letter-spacing: -0.08px;
 }
 
-.button.orange { background: $colorOrange; color: #000; }
+.button.orange { background: $colorOrange; color: #fff; }
 .button.orange:hover { color: #000; background: #f1981a; }
 
 .button.grey { background: none; color: #000; box-shadow: 0px 0px 0px 1px #d2d0c2 inset; }
