black color fix

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,5 +1,5 @@
 $colorGrey: #e0ded2;
-$colorBlack: #393834;
+$colorBlack: #2c2b27;
 $colorBrown: #aca996;
 $colorOrange: #ffbb2c;
 $colorRed: #f86240;
