--- a/src/scss/component/button.scss
+++ b/src/scss/component/button.scss
@@ -7,10 +7,10 @@
 }
 
 .button.orange { background: $colorOrange; color: #fff; }
-.button.orange:hover { color: #000; background: #f1981a; }
+.button.orange:hover { background: #f1981a; }
 
-.button.grey { background: none; color: #000; box-shadow: 0px 0px 0px 1px #d2d0c2 inset; }
-.button.grey:hover { box-shadow: 0px 0px 0px 1px #000 inset; }
+.button.grey { background: none; color: $colorBlack; box-shadow: 0px 0px 0px 1px #d2d0c2 inset; }
+.button.grey:hover { box-shadow: 0px 0px 0px 1px $colorBlack inset; }
 
 .button.blank { line-height: 36px; background: none; border: solid 1px #d5d3c8; }
 .button.blank:hover { background: #d5d3c8; }
@@ -25,4 +25,4 @@ input.button { line-height: 1; }
 	height: auto; line-height: 1; padding: 0px; color: #aca996; font-weight: bold; line-height: 1.43; 
 	letter-spacing: 0.1px; 
 }
-.button.simple:hover { color: #000; }
+.button.simple:hover { color: $colorBlack; }
