--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -2,7 +2,7 @@
 
 .pageAuth, .pageIndex {
 	.frame { width: 672px; padding: 36px 48px 32px 48px; }
-	.title { font-size: 36px; line-height: 40px; font-weight: 600; letter-spacing: -0.72px; color: #000; margin-bottom: 15px; }
+	.title { font-size: 36px; line-height: 40px; font-weight: 600; letter-spacing: -0.72px; margin-bottom: 15px; }
 	.label { margin-bottom: 25px; }
 	.input { height: 40px; border: solid 1px #d2d0c2; }
 	
@@ -58,7 +58,7 @@
 		}
 		.item.add:hover {
 			.icon.plus { background-image: url('~img/icon/plus/account1.svg'); }
-			.name { color: #000; }
+			.name { color: $colorBlack; }
 		}	
 	}
 }
