--- a/src/scss/component/menu.scss
+++ b/src/scss/component/menu.scss
@@ -19,7 +19,7 @@
 		.item.active { background: $colorBlack; }
 		
 		.icon { width: 24px; height: 24px; margin-right: 8px; }
-		.name { display: inline-block; vertical-align: middle; line-height: 1; margin-top: 2px; }
+		.name { display: inline-block; vertical-align: middle; }
 	}
 	
 	.icon.chat { background-size: 18px 20px; background-image: url('~img/icon/menu/help/chat0.svg'); }
