--- a/src/scss/component/textArea.scss
+++ b/src/scss/component/textArea.scss
@@ -2,7 +2,7 @@
 
 .textArea {
 	width: 100%; height: 100px; resize: none; font-size: 15px; border: 0px; background: #f7f5f0; padding: 20px;
-	line-height: 1.6; letter-spacing: -0.1px; color: $colorBlack; display: block;
+	line-height: 24px; letter-spacing: -0.12px; color: $colorBlack; display: block; font-family: 'Mono'; 
 }
 .textArea::placeholder { color: #d2d0c2; }
 
