updater version, editor initial commit

--- a/src/scss/component/menu.scss
+++ b/src/scss/component/menu.scss
@@ -32,9 +32,9 @@
 		.icon.community { background-image: url('~img/icon/menu/help/community1.svg'); }
 	}
 	
-	.menu.menu-help { width: 224px; }
+	.menu.menuHelp { width: 224px; }
 }
 
-.menu-main {
+.menuMain {
 	overflow-x: hidden; overflow-y: auto;
 }
