--- a/src/scss/component/popup.scss
+++ b/src/scss/component/popup.scss
@@ -8,5 +8,5 @@
 	}
 	.popup.show { opacity: 1; transform: scale3d(1,1,1); }
 	
-	.popup-profile { width: 640px; height: 480px; }
+	.popupProfile { width: 640px; height: 480px; }
 }
