--- a/src/scss/page/main/edit.scss
+++ b/src/scss/page/main/edit.scss
@@ -1,4 +1,8 @@
 @import "~scss/_vars";
 
 .pageMainEdit {
+	.block { width: 240px; min-height: 24px; border: 1px solid red; margin: 1px; }
+	.block {
+		.children { padding-left: 20px; }
+	}
 }
