folder page initial + refactoring

--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -1,10 +1,19 @@
-.smile { 
-	display: inline-block; vertical-align: top; width: 24px; height: 24px; text-align: center; margin-right: 4px;
-	line-height: 24px; 
-}
+.smile { display: inline-block; vertical-align: top; width: 24px; height: 24px; text-align: center; line-height: 24px; }
 .smile {
 	.emoji-mart-emoji { height: 100%; display: inline-block; vertical-align: middle; }
 	.emoji-mart-emoji {
 		span { height: 100%; display: inline-block; vertical-align: middle; background-image: url('~img/emoji.png') !important; }
 	}
+}
+
+.smile.c48 { width: 48px; height: 48px; border-radius: 100%; background-color: #f7f5f0; line-height: 48px; }
+.smile.c48 {
+	.emoji-mart-emoji { font-size: 24px; height: 32px; line-height: 1em; }
+	.emoji-mart-emoji { span { height: 32px; line-height: 32px; } }
+}
+
+.smile.c64 { width: 64px; height: 64px; border-radius: 100%; background-color: #f7f5f0; line-height: 64px; }
+.smile.c64 {
+	.emoji-mart-emoji { font-size: 36px; height: 1em; line-height: 1em; }
+	.emoji-mart-emoji { span { height: 36px; line-height: 36px; margin: -1px 0px 0px 2px; } }
 }
