--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -2,7 +2,7 @@
 
 .pageAuth, .pageIndex {
 	.frame { width: 672px; padding: 36px 48px 32px 48px; }
-	.title { font-size: 36px; line-height: 40px; font-weight: 600; letter-spacing: -0.72px; margin-bottom: 15px; }
+	.title { margin-bottom: 15px; }
 	.label { margin-bottom: 25px; }
 	.input { height: 40px; border: solid 1px #d2d0c2; }
 	
@@ -11,11 +11,7 @@
 		background-color: #fff; 
 	}
 	
-	.smile { width: 64px; height: 64px; border-radius: 100%; background-color: #f7f5f0; line-height: 64px; margin-bottom: 12px; }
-	.smile {
-		.emoji-mart-emoji { height: 36px; line-height: 36px; }
-		.emoji-mart-emoji { span { height: 36px; line-height: 36px; margin: -1px 0px 0px 2px; } }
-	}
+	.smile { margin-bottom: 12px; }
 	
 	.button { margin-right: 16px; }
 	.button:last-child { margin: 0px; }
