--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -3,7 +3,7 @@
 .pageMainIndex {
 	.wrapper { position: relative; z-index: 1; padding: 90px 0px 0px 0px; margin: 0px auto; }
 	
-	.title { font-size: 36px; line-height: 40px; letter-spacing: -0.72px; color: #fff; font-weight: 600; position: relative; }
+	.title { color: #fff; position: relative; }
 	.title {
 		.rightMenu { position: absolute; right: 0px; top: 0px; }
 		.icon { width: 40px; height: 40px; vertical-align: top; margin-right: 8px; border-radius: 100%; cursor: pointer; }
@@ -22,11 +22,6 @@
 		}
 		
 		.item {
-			.smile { width: 48px; height: 48px; border-radius: 100%; background-color: #f7f5f0; line-height: 48px; }
-			.smile {
-				.emoji-mart-emoji { height: 32px; line-height: 32px; }
-				.emoji-mart-emoji { span { height: 32px; line-height: 32px; margin: -1px 0px 0px 2px; } }
-			}
 			.name { 
 				font-size: 15px; font-weight: 500; line-height: 24px; height: 24px; letter-spacing: -0.1px; width: 100%;
 				overflow: hidden; word-break: break-word; position: absolute; left: 0px; bottom: 16px; padding: 0px 16px;
