--- a/src/scss/page/main/folder.scss
+++ b/src/scss/page/main/folder.scss
@@ -2,7 +2,7 @@
 
 .pageMainFolder {
 	.wrapper { padding: 94px; }
-	.title { line-height: 48px; }
+	.title { line-height: 48px; margin-bottom: 15px; }
 	.title {
 		.smile { margin-right: 8px; }
 	}
